# gester

./: README.md  gester.cpp  gester.hpp  meson.build
fasta/: myco.fasta  small.fasta
subprojects/: digest.wrap
